Changes to Apache-DBILogin

2.01 Fri Dec  3 11:56:24 EST 2004
	- extensive rework of DBILogin.pm for modperl 2.0 support
	- Makefile.PL now includes DBI as a prereq
	- added t/01use.t to satisfy CPAN automated testers

2.0 Wed Feb 21 14:11:42 EST 2001
	- removed HTTP_MODPERL_PASSWORD environment
	- replaced default handler sub with authen sub
	- added authz handler
	- deprecated Auth_DBI_authz_command

1.6 Mon Feb  7 15:57:54 EST 2000
	- removed the test for Apache::DBI as it will only compile inside the modperl box

1.5 Tue Nov 17 14:02:44 EST 1998
	- documentation updates
	- removed HTTPD::UserAdmin prerequisite from Makefile.PL and DBILogin.pm
	- added environment HTTP_MODPERL_DBILOGIN_PASSWORD, deprecates HTTP_MODPERL_PASSWORD 
	- added environment HTTP_MODPERL_DBILOGIN_DATA_SOURCE
	- moved DBILogin.pm to top of source tree and changed MANIFEST
	- return OK unless first internal request

1.4 Tue Jun  9 15:32:29 EDT 1998
	- added authorization via DBI do method

1.3 Thu Oct 16 14:43:34 EDT 1997
	- documentation fixes

1.2 Sat Aug 30 15:06:40 EDT 1997
	- compliant with ApacheDBI-0.74