@@ -4,5 +4,6 @@ WriteMakefile(
    NAME          => 'Apache::DBILogin',
    DISTNAME      => 'Apache-DBILogin',
    VERSION_FROM  => 'DBILogin.pm',
-   PREREQ_PM => { DBI => 0.01, }
+   PREREQ_PM => { DBI => '0',
+                  mod_perl => '0'}
 );
